--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/inter": "^5.0.19",
-    "@fontsource/twinkle-star": "^5.0.20",
+    "@fontsource-variable/newsreader": "^5.0.19",
+    "@fontsource/ibm-plex-sans": "^5.0.20",
     "astro": "^4.10.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
