--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@fontsource-variable/newsreader": "^5.0.19",
     "@fontsource/ibm-plex-sans": "^5.0.20",
     "astro": "^4.10.2",
+    "astro-icon": "^1.1.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@iconify-json/lets-icons": "^1.1.2",
     "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-tailwindcss": "^0.6.5"
