--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.7.2",
     "@fontsource-variable/inter": "^5.0.19",
     "@fontsource-variable/newsreader": "^5.0.19",
     "@fontsource/ibm-plex-sans": "^5.0.20",
