--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource-variable/inter": "^5.0.19",
     "@fontsource-variable/newsreader": "^5.0.19",
     "@fontsource/ibm-plex-sans": "^5.0.20",
+    "@tailwindcss/typography": "^0.5.13",
     "astro": "^4.10.2",
     "astro-icon": "^1.1.0",
     "tailwindcss": "^3.4.4",
